crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__if_extra_closing_parentheses.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/if_extra_closing_parentheses.py
---
## AST

```
Module(
    ModModule {
        range: 0..110,
        body: [
            If(
                StmtIf {
                    range: 90..97,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            range: 93..97,
                            value: true,
                        },
                    ),
                    body: [],
                    elif_else_clauses: [],
                },
            ),
            Pass(
                StmtPass {
                    range: 105..109,
                },
            ),
        ],
    },
)
```
## Errors

error: Invalid syntax
  |
1 | # FIXME(micha): This creates two syntax errors instead of just one (and overlapping ones)
2 | if True)):
  |        ^ Expected ':', found ')'
3 |     pass
  |


error: Invalid syntax
  |
1 | # FIXME(micha): This creates two syntax errors instead of just one (and overlapping ones)
2 | if True)):
  |         ^ Expected a statement
3 |     pass
  |


error: Invalid syntax
  |
1 | # FIXME(micha): This creates two syntax errors instead of just one (and overlapping ones)
2 | if True)):
  |          ^ Expected a statement
3 |     pass
  |


error: Invalid syntax
  |
1 | # FIXME(micha): This creates two syntax errors instead of just one (and overlapping ones)
2 | if True)):
  |           ^ Expected a statement
3 |     pass
  |


error: Invalid syntax
  |
1 | # FIXME(micha): This creates two syntax errors instead of just one (and overlapping ones)
2 | if True)):
3 |     pass
  | ^^^^ Unexpected indentation
  |


error: Invalid syntax
  |
2 | if True)):
3 |     pass
  |
